--- a/cursoconvocatoria2025/index.html
+++ b/cursoconvocatoria2025/index.html
@@ -27,7 +27,7 @@
 
         <section class="title-section">
             <div class="title-description">
-                <p>Con la finalidad de ofrecer una alternativa en la preparación de los aspirantes a nuevo ingreso a alguno de los campus pertenecientes al Tecnológico Nacional de México [TECNM] ofrecemos:</p>
+                <p>Con la finalidad de ofrecer una alternativa en la preparación de los aspirantes a nuevo ingreso a alguno de los campus pertenecientes al Tecnológico Nacional de México (TECNM) ofrecemos:</p>
                 <h1>Curso de preparación para sustentar el EVALUATEC 2025</h1>
 
 
