--- a/admision2025/index.html
+++ b/admision2025/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Consulta los pasos siguientes para hacer una inscripción al examen del Instituto Tecnológico Superior Progreso."> 
     <meta name="keywords" content="Admisión del Instituto Tecnológico Superior Progreso, Admisión 2025, Inscribirse al ITSP, Inscripción Instituto Tecnológico Superior de Progreso"> 
+    <meta name="og:image" content="img/portada.jpg">
     <title>Aspirantes</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
