--- a/cursoconvocatoria2025/index.html
+++ b/cursoconvocatoria2025/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aspirantes</title>
+    <meta name="description" content="Consulta la información para inscribirse a la convocatoria del curso de preparación EVALUATEC 2025."> 
+    <meta name="keywords" content="Admisión del Instituto Tecnológico Superior Progreso, Admisión 2025, Inscribirse al ITSP, Inscripción Instituto Tecnológico Superior de Progreso, Convocatoria Curso 2025 EVALUATEC, Curso EVALUATEC 2025, Cursos de preparación"> 
+    <meta name="og:image" content="img/portada.jpg">
+    <title>Curso EVALUATEC 2025</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
