--- a/admision2025/index.html
+++ b/admision2025/index.html
@@ -215,7 +215,7 @@
                         <div class="step-title end-step">
                             <h1 class="end number-card">2</h1>
                             <div class="step-title-description">
-                                <p>Pago al proceso de inscripción</p>
+                                <p>Pago para el examen de admisión</p>
                             </div>
                         </div>
     
