--- a/admision2025/index.html
+++ b/admision2025/index.html
@@ -6,6 +6,11 @@
     <meta name="description" content="Consulta los pasos siguientes para hacer una inscripción al examen del Instituto Tecnológico Superior Progreso."> 
     <meta name="keywords" content="Admisión del Instituto Tecnológico Superior Progreso, Admisión 2025, Inscribirse al ITSP, Inscripción Instituto Tecnológico Superior de Progreso"> 
     <meta name="og:image" content="img/portada.jpg">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <link rel="apple-touch-icon" href="img/tec_icon.jpg">
+    <link rel="manifest" href="manifiest.json">
+
     <title>Aspirantes</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -157,7 +162,7 @@
                         </div>
 
                         <div class="tarjet-career">
-                            <div class="tarjet-career-image" style="background-image: url(img/sistemas@4x.png);"></div> 
+                            <div class="tarjet-career-image" style="background-image: url(img/animacion@4x.png);"></div> 
                             <h1 style="background: #EE9603;">Ingeniería en Animación Digital y Efectos Visuales</h1> 
                             <p>Un ingeniero en Animación Digital y Efectos Visuales es un especialista en modelar, animar, desarrollar y crear contenidos multimedia y efectos visuales para la industría del entretenimiento digital, publicitaria, educación, entre otros.</p>
                             <div class="show-more"><a href="">Ver más...</a></div>
